@@ -16,7 +16,7 @@
 !$$$      include 'system.inc'      
 
       integer(KIND=normal_int)::i,j,k,n,ncellx,ncelly,ncellz,iinit,ibox
-     & ,linkdecode,imol,ic,cellinc,ia,ja,ka,ib,jb,kb,count,ncell
+     & ,linkdecode,imol,ic,cellinc(27),ia,ja,ka,ib,jb,kb,count,ncell
      & ,ncello
 
       real(KIND=double_precision)::dcellx,dcelly,dcellz,rx,ry,rz,xcmi
@@ -24,8 +24,6 @@
 
 !     *** rintramax is the maximum distance between endpoints 
 !     *** in a molecule
-
-      dimension cellinc(27)
 
       save dcellx,dcelly,dcellz,ncellx,ncelly,ncellz,ncello
       
